# serde-indexed

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  parse.rs
tests/: basics.rs  lifetimes.rs
utilities/: Cargo.toml
utilities/src/: lib.rs
