[package]
name = "serde-indexed"
version = "0.0.4"
authors = ["Nicolas Stalder <n@stalder.io>"]
license = "Apache-2.0 OR MIT"
description = "Derivation of Serialize and Deserialize that replaces struct keys with numerical indices."
categories = ["embedded", "encoding", "no-std"]
keywords = ["serde", "cbor", "rust", "no-std"]
repository = "https://github.com/nickray/serde-indexed"
readme = "README.md"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[dev-dependencies]
heapless = { version = "0.5.1", default-features = false, features = ["serde"] }
# rustversion = "1.0"
serde = { version = "1.0", default-features = false }
serde_cbor = { version = "0.11.0", default-features = false }
# trybuild = { version = "1.0.19", features = ["diff"] }
