[package]
name = "serde-indexed"
version = "0.1.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
license = "Apache-2.0 OR MIT"
description = "Derivation of Serialize and Deserialize that replaces struct keys with numerical indices."
categories = ["embedded", "encoding", "no-std"]
keywords = ["serde", "cbor", "rust", "no-std"]
repository = "https://github.com/nickray/serde-indexed"
readme = "README.md"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[dev-dependencies]
heapless = { version = "0.7.16", default-features = false, features = ["serde"] }
hex-literal = "0.4.1"
serde = { version = "1" }
serde-byte-array = "0.1.2"
serde_bytes = { version = "0.11.12", default-features = false }
serde_cbor = { version = "0.11.0" }
